--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,19 +6,19 @@ on:
       LOCAL_MANIFEST_URL:
         description: 'LOCAL_MANIFEST_URL (if want to use SSH keys, use git@github.com:XXXXX)'
         required: true
-        default: 'https://github.com/sounddrill31/local_manifests'
+        default: 'https://github.com/MaheshTechnicals/local_manifests1'
       LOCAL_MANIFEST_BRANCH:
         description: 'LOCAL_MANIFEST_BRANCH'
         required: true
-        default: 'lineage-oxygen'
+        default: 'main'
       ROM_MANIFEST_URL:
         description: 'MANIFEST_URL (if want to use SSH keys, use git@github.com:XXXXX)'
         required: true
-        default: 'https://github.com/LineageOS/android'
+        default: 'https://github.com/AlphaDroid-Project/manifest'
       ROM_MANIFEST_BRANCH:
         description: 'MANIFEST_BRANCH'
         required: true
-        default: 'lineage-20.0'
+        default: 'alpha-14'
       CHOICE:
         type: choice
         description: 'Which would you like to test?'
